# Desktop-Authenticator

./: Cargo.toml  readme.md
src/: data.rs  db.rs  error.rs  handler.rs  main.rs  totp.rs
templates/: template.html
