[package]
name = "desktop-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
handlebars = "4.4.0"
hmac = "0.12.1"
mobc = "0.8.2"
mobc-postgres = { version = "0.8.0", features = ["with-chrono-0_4"] }
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
totp-rs = "5.3.0"
warp = "0.3.5"
